--- a/10 years online copy/2014.html
+++ b/10 years online copy/2014.html
@@ -40,7 +40,7 @@
         </main>
         <footer>
         <a href="2024.html">
-            <img src="img/timeskip.png">
+            <img class="timeskip" src="img/timeskip.png">
         </a>
         </footer>
     </body>
