--- a/10 years online copy/2024.html
+++ b/10 years online copy/2024.html
@@ -20,17 +20,44 @@
         </section>
         <main>
             <a href="journal.html">
-                <img class="star1" src="img/art.png.jpeg">
+                <img class="art" src="img/art.png">
             </a>
-            <a href="macbook.html">
-                <img class="star2" src="img/phone.png.jpeg">
-            </a>  
+            <div class="phonecontainer"></div>
+                <a href="macbook.html">
+                    <img class="phone" src="img/phone.png">
+                </a> 
+            </div> 
             <a href="2024warning_1.html">
                 <img class="warning2" src="img/warning2.png">
             </a>
             <a href="computer2.html">
                 <p class="computerclick2"> click here!</p>
             </a>
+            <a href="https://www.youtube.com/watch?v=dtMesafhSYI">
+                <p class="end"> to be continued...</p>
+            </a>
+        
+            <p class="words1"> i f</p>
+            <p class="words2"> y o u</p>
+            <a href="https://vimeo.com/912468833?share=copy">
+                <p class="words3"> c a r e</p>
+            </a>
+            <p class="words4"> even though im a sophomore in college, i still feel like im stuck as a sophmore in highschool...</p>
+            <p class="words5"> covid really altered my perception of time! </p>
+           
+            <p class="words6"> " t h e r e ' s </p>
+            <p class="words7"> o n l y </p>
+            <p class="words8"> one </p>
+            <p class="words9"> t h i n g </p>
+            <p class="words10">  m o r e</p>
+            <p class="words11"> p r e c i o u s </p>
+            <p class="words12"> t h a n </p>
+            <p class="words13"> our </p>
+            <p class="words14"> time, </p>
+            <p class="words15"> and that's who we</p>
+            <p class="words16"> spend it on" </p>
+            <p class="words17">  - leo christopher. </p>
+
         </main>
     </body>
 </html>
