--- a/10 years online copy/index.html
+++ b/10 years online copy/index.html
@@ -16,13 +16,11 @@
         <div id="loading">
             <img class="play-delay" src="img/loading.gif" alt="loading">
         </div>
-
-        </div>
         <div id="playbutton">
             <a href="2014.html">
-                <img src="img/playbutton.png" alt="playbutton">
+                <img src="img/playbutton.png" >
             </a>
-            </div>
+        </div>
     </main>
 
 </body>
