--- a/10 years online copy/journal.html
+++ b/10 years online copy/journal.html
@@ -23,12 +23,12 @@
         </section>
          <main class="journalbox">
             <div class="journal_1">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.linkedin.com/in/adriannardelarosa/">
                     <img src="img/phonemems1.png">
                 </a>
             </div>
             <div class="journal_2">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://discord.com">
                     <img src="img/phonemems2.png">
                 </a>
             </div>
@@ -38,37 +38,37 @@
                 </a>
             </div>
             <div class="journal_4">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.instagram.com/xxfairypooper68xx/">
                     <img src="img/phonemems4.png">
                 </a>
             </div>
             <div class="journal_5">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.crunchyroll.com">
                     <img src="img/phonemems5.png">
                 </a>
             </div>
             <div class="journal_6">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.youtube.com/watch?v=TI1sCWcyfgc&list=LL&index=199">
                     <img src="img/phonemems6.png">
                 </a>
             </div>
             <div class="journal_7">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.behance.net/adrianndelar">
                     <img src="img/phonemems7.png">
                 </a>
             </div>
             <div class="journal_8">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.youtube.com/watch?v=XfuMEmcz3k0">
                     <img src="img/phonemems8.png">
                 </a>
             </div>
             <div class="journal_9">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.youtube.com/playlist?list=PLiZLS0Ot_fGf5D0F0kGMEnaTOCWM8ICu6">
                     <img src="img/phonemems9.png">
                 </a>
             </div>
             <div class="journal_10">
-                <a href="https://www.instagram.com/adriannarachel05/">
+                <a href="https://www.girlsgogames.com">
                     <img src="img/phonemems10.png">
                 </a>
             </div>
