--- a/cow.html
+++ b/cow.html
@@ -10,7 +10,7 @@
         <title>🌱vitural diary🌱</title>
         <meta name="description" content="social medeia site">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/stylesheet.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
     </head>
     <body>
         <header>
